Fri Aug  3 21:39:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/BaseMessageUtils.h:

          Whitespace fix only.

Fri Aug  3 18:19:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/QOS_XML_Handler/qos_xml_handler.mpc:
          Added dependency on mpc feature dds4ccm_opendds again, older
          ACE versions don't have this library

Thu Aug  2 13:20:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Mention CIAO dependency removal

Thu Aug  2 09:24:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/DomainParticipantImpl.h:
          Fixed typo in comment

        * dds/DdsDcps.mpc:
        * dds/DdsDcpsDomain.idl:
        * dds/DdsDcpsInfrastructure.idl:
        * dds/DdsDcpsPublication.idl:
        * dds/DdsDcpsSubscription.idl:
        * dds/DdsDcpsTopic.idl:
          Removed the ability of generating the CIAO lem for opendds. This has
          been moved to CIAO making OpenDDS less dependent on CIAO, we only
          need to specify ciao lem in the IDL files for which we need a lem
          as part of CIAO

        * dds/DCPS/QOS_XML_Handler/qos_xml_handler.mpc:
          Removed dependency on dds4ccm

        * MPC/config/dcps_lem_stub.mpb:
        * MPC/config/dds4ccm_opendds.mpb:
          Removed these files.

Fri Jul 27 15:46:56 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FilterEvaluator.cpp:

          Fixed a bug in converting filter terms to LongDouble.

Fri Jul 27 13:14:50 UTC 2012  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.inl:
        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fix rtps discovery deadlock problem on Windows.

Wed Jul 25 21:51:17 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/Ownership/Ownership.mpc:
          Added necessary rtps library dependencies.
